--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bin"]
-	path = bin
-	url = https://github.com/hanez/bin
+#[submodule "bin"]
+#	path = bin
+#	url = https://github.com/hanez/bin
