--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "oh-my-zsh"]
 	path = .oh-my-zsh
-	url = https://github.com/hanez/home.git
+	url = https://github.com/hanez/oh-my-zsh.git
