add .zsh/ for any custom zsh stuff containing some git submodules; moved zsh-syntax-highlighting .zsh/ to not stay in oh-my-zsh dir anymore

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "oh-my-zsh"]
 	path = .oh-my-zsh
 	url = https://github.com/hanez/oh-my-zsh.git
+
+[submodule "zsh-syntax-highlighting"]
+        path = .zsh/zsh-syntax-highlighting
+        url = git@github.com:zsh-users/zsh-syntax-highlighting.git
