--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 
 [submodule "zsh-syntax-highlighting"]
         path = .zsh/zsh-syntax-highlighting
-        url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+        url = https://github.com/zsh-users/zsh-syntax-highlighting.git
