--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,9 @@
 [submodule "oh-my-zsh"]
-	path = .zsh/oh-my-zsh
-	url = https://github.com/hanez/oh-my-zsh.git
-
+    path = .zsh/oh-my-zsh
+    url = https://github.com/hanez/oh-my-zsh.git
+[submodule "nerdtree"]
+    path = .vim/bundle/nerdtree
+    url = https://github.com/scrooloose/nerdtree.git
 [submodule "zsh-syntax-highlighting"]
-        path = .zsh/zsh-syntax-highlighting
-        url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+    path = .zsh/zsh-syntax-highlighting
+    url = https://github.com/zsh-users/zsh-syntax-highlighting.git
