--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *
 
+!.config
+!.config/awesome
+!.config/awesome/**
 !.gitignore
 !.vimrc
 !.Xresources
@@ -11,3 +14,5 @@
 !.zshrc
 
 !README.md
+
+*.swp
