remove midnight commander ini file; mc is changing the file while usage. that does not work in a git repo

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 !.config
 !.config/awesome
 !.config/awesome/**
-!.config/mc
-!.config/mc/ini
+#!.config/mc
+#!.config/mc/ini
 !.gitignore
 !.vimrc
 !.Xresources
