--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 !.config
 !.config/awesome
 !.config/awesome/**
-.config/awesome/private.lua
+!.config/awesome/private.lua
 #!.config/mc
 #!.config/mc/ini
 !.config/user-dirs.dirs
