added a theme to es

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "es-carbon-theme"]
+    path = .config/emulationstation/themes/es-carbon-theme
+    url = https://github.com/RetroPie/es-theme-carbon
 [submodule "oh-my-zsh"]
     path = .zsh/oh-my-zsh
     url = https://github.com/hanez/oh-my-zsh.git
