--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 .config/emulationstation/downloaded_images
 .config/emulationstation/es_log.txt
 .config/emulationstation/gamelists
-.config/emulationstation/themes
+!.config/emulationstation/themes
+!.config/emulationstation/themes/**
 #!.config/mc
 #!.config/mc/ini
 !.config/user-dirs.dirs
