--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "es-carbon-theme"]
-    path = .config/emulationstation/themes/es-carbon-theme
-    url = https://github.com/RetroPie/es-theme-carbon
+[submodule "es-theme-carbon"]
+    path = .config/emulationstation/themes/es-theme-carbon
+    url = https://github.com/RetroPie/es-theme-carbon.git
 [submodule "oh-my-zsh"]
     path = .zsh/oh-my-zsh
     url = https://github.com/hanez/oh-my-zsh.git
