--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,24 @@
 *
 
 !.config
+
 !.config/awesome
 !.config/awesome/**
 .config/awesome/private.lua
+
 !.config/emulationstation
-!.config/emulationstation/**
-.config/emulationstation/downloaded_images
-.config/emulationstation/es_log.txt
-.config/emulationstation/gamelists
-#!.config/emulationstation/themes
-#!.config/emulationstation/themes/**
+!.config/emulationstation/es_input.cfg
+!.config/emulationstation/es_settings.cfg
+!.config/emulationstation/es_systems.cfg
+!.config/emulationstation/themes
+!.config/emulationstation/themes/es-theme-carbon
+
 #!.config/mc
 #!.config/mc/ini
+
 !.config/user-dirs.dirs
 !.config/user-dirs.locale
+
 !.gitignore
 #!.toprc
 !.vimrc
