added simple theme

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 !.config/emulationstation/es_systems.cfg
 !.config/emulationstation/themes
 !.config/emulationstation/themes/es-theme-carbon
+!.config/emulationstation/themes/simple
 
 #!.config/mc
 #!.config/mc/ini
