fixed simple theme submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "es-theme-carbon"]
+[submodule ".config/emulationstation/themes/es-theme-carbon"]
     path = .config/emulationstation/themes/es-theme-carbon
     url = https://github.com/RetroPie/es-theme-carbon.git
-[submodule "es-theme-simple"]
-    path = .config/emulationstation/themes/simple
-    url = https://github.com/nilsbyte/simple.git
-[submodule "oh-my-zsh"]
+[submodule ".config/emulationstation/themes/simple"]
+	path = .config/emulationstation/themes/simple
+	url = https://github.com/nilsbyte/simple.git
+[submodule ".zsh/oh-my-zsh"]
     path = .zsh/oh-my-zsh
     url = https://github.com/hanez/oh-my-zsh.git
-[submodule "nerdtree"]
+[submodule ".vim/bundle/nerdtree"]
     path = .vim/bundle/nerdtree
     url = https://github.com/scrooloose/nerdtree.git
