--- a/.config/awesome/private.lua.example
+++ b/.config/awesome/private.lua.example
@@ -1,7 +1,7 @@
 private = {}
 private.thermal_zone = "thermal_zone1"
 private.net_device = "wlp4s0"
-private.battery = {"BAT0", "BAT1"}
+private.battery = "BAT0"
 private.font_awesome = "Source Code Pro"
 private.font_awesome_size = "10"
 private.font_xterm = "Source Code Pro Semibold"
