--- a/.config/emulationstation/es_systems.cfg
+++ b/.config/emulationstation/es_systems.cfg
@@ -1,5 +1,60 @@
-<systemList>	
+<systemList>
     <system>
+		<name>gb</name>
+		<fullname>Nintendo Gameboy</fullname>
+		<path>~/roms/gb</path>
+		<extension>.gb .zip .7z</extension>
+		<command>retroarch -f -L /usr/lib/libretro/gambatte_libretro.so %ROM%</command>
+		<platform>gb</platform>
+		<theme>gb</theme>
+	</system>
+    <system>
+		<name>nes</name>
+		<fullname>Nintendo Entertainment System</fullname>
+		<path>~/roms/nes</path>
+		<extension>.nes .zip .7z</extension>
+		<command>retroarch -f -L /usr/lib/libretro/quicknes_libretro.so %ROM%</command>
+		<platform>nes</platform>
+		<theme>nes</theme>
+	</system>
+	<system>
+		<name>snes</name>
+		<fullname>Super Nintendo Entertainment System</fullname>
+		<path>~/roms/snes</path>
+		<extension>.sfc .zip .7z</extension>
+		<command>retroarch -f -L /usr/lib/libretro/snes9x_libretro.so %ROM%</command>
+		<platform>snes</platform>
+		<theme>snes</theme>
+	</system>
+	<system>
+		<name>gamegear</name>
+		<fullname>Sega Game Gear</fullname>
+		<path>~/roms/gamegear</path>
+		<extension>.zip .7z</extension>
+		<command>retroarch -f -L /usr/lib/libretro/genesis_plus_gx_libretro.so %ROM%</command>
+		<platform>gamegear</platform>
+		<theme>gamegear</theme>
+	</system>
+	<system>
+		<name>mastersystem</name>
+		<fullname>Sega Master System</fullname>
+		<path>~/roms/mastersystem</path>
+		<extension>.zip .7z</extension>
+		<command>retroarch -f -L /usr/lib/libretro/picodrive_libretro.so %ROM%</command>
+		<platform>mastersystem</platform>
+		<theme>mastersystem</theme>
+	</system>
+	<system>
+		<name>megadrive</name>
+		<fullname>Sega Megadrive</fullname>
+		<path>~/roms/megadrive</path>
+		<extension>.zip .7z</extension>
+		<!--<command>retroarch -f -L /usr/lib/libretro/genesis_plus_gx_libretro.so %ROM%</command>-->
+		<command>retroarch -f -L /usr/lib/libretro/picodrive_libretro.so %ROM%</command>
+		<platform>megadrive</platform>
+		<theme>megadrive</theme>
+	</system>
+	<system>
 		<name>atari2600</name>
 		<fullname>Atari 2600</fullname>
 		<path>~/roms/atari2600</path>
@@ -34,77 +89,5 @@
 		<command>retroarch -f -L /usr/lib/libretro/handy_libretro.so %ROM%</command>
 		<platform>atarilynx</platform>
 		<theme>atarilynx</theme>
-	</system>
-    <system>
-		<name>c64</name>
-		<fullname>Commodore C64</fullname>
-		<path>~/roms/c64</path>
-		<extension>.zip .7z</extension>
-		<command>retroarch -f -L /usr/lib/libretro/frodo_libretro.so %ROM%</command>
-		<platform>c64</platform>
-		<theme>c64</theme>
-	</system>
-    <system>
-		<name>gb</name>
-		<fullname>Nintendo Gameboy</fullname>
-		<path>~/roms/gb</path>
-		<extension>.gb .zip .7z</extension>
-		<command>retroarch -f -L /usr/lib/libretro/gambatte_libretro.so %ROM%</command>
-		<platform>gb</platform>
-		<theme>gb</theme>
-	</system>
-    <system>
-		<name>gba</name>
-		<fullname>Nintendo Gameboy Advance</fullname>
-		<path>~/roms/gba</path>
-		<extension>.gba .zip .7z</extension>
-		<command>retroarch -f -L /usr/lib/libretro/vba_next_libretro.so %ROM%</command>
-		<platform>gba</platform>
-		<theme>gba</theme>
-	</system>
-    <system>
-		<name>nes</name>
-		<fullname>Nintendo Entertainment System</fullname>
-		<path>~/roms/nes</path>
-		<extension>.nes .zip .7z</extension>
-		<command>retroarch -f -L /usr/lib/libretro/quicknes_libretro.so %ROM%</command>
-		<platform>nes</platform>
-		<theme>nes</theme>
-	</system>
-	<system>
-		<name>snes</name>
-		<fullname>Super Nintendo Entertainment System</fullname>
-		<path>~/roms/snes</path>
-		<extension>.sfc .zip</extension>
-		<command>retroarch -f -L /usr/lib/libretro/snes9x_libretro.so %ROM%</command>
-		<platform>snes</platform>
-		<theme>snes</theme>
-	</system>
-	<system>
-		<name>gamegear</name>
-		<fullname>Sega Game Gear</fullname>
-		<path>~/roms/gamegear</path>
-		<extension>.zip .7z</extension>
-		<command>retroarch -f -L /usr/lib/libretro/picodrive_libretro %ROM%</command>
-		<platform>gamegear</platform>
-		<theme>gamegear</theme>
-	</system>
-	<system>
-		<name>mastersystem</name>
-		<fullname>Sega Master System</fullname>
-		<path>~/roms/mastersystem</path>
-		<extension>.zip .7z</extension>
-		<command>retroarch -f -L /usr/lib/libretro/picodrive_libretro %ROM%</command>
-		<platform>mastersystem</platform>
-		<theme>mastersystem</theme>
-	</system>
-	<system>
-		<name>megadrive</name>
-		<fullname>Sega Megadrive</fullname>
-		<path>~/roms/megadrive</path>
-		<extension>.zip .7z</extension>
-		<command>retroarch -f -L /usr/lib/libretro/picodrive_libretro %ROM%</command>
-		<platform>megadrive</platform>
-		<theme>megadrive</theme>
 	</system>
 </systemList>
