--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,13 @@
 !.config/awesome/**
 .config/awesome/private.lua
 
-!.config/emulationstation
-!.config/emulationstation/es_input.cfg
-!.config/emulationstation/es_settings.cfg
-!.config/emulationstation/es_systems.cfg
-!.config/emulationstation/themes
-!.config/emulationstation/themes/es-theme-carbon
-!.config/emulationstation/themes/simple
+!.emulationstation
+!.emulationstation/es_input.cfg
+!.emulationstation/es_settings.cfg
+!.emulationstation/es_systems.cfg
+#!.config/emulationstation/themes
+#!.config/emulationstation/themes/es-theme-carbon
+#!.config/emulationstation/themes/simple
 
 #!.config/mc
 #!.config/mc/ini
