--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".zsh/oh-my-zsh"]
 	path = .zsh/oh-my-zsh
-	url = git@github.com:hanez/oh-my-zsh.git
+	url = git@git.unixpeople.org:hanez/oh-my-zsh.git
