--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,15 @@
 !bin
 #!bin/**
 !bin/eagle.sh
+!bin/forksync.sh
 !bin/gnucash.sh
+!bin/hanez.org.sh
 !bin/steam.sh
 !bin/myip.sh
 !bin/nas-boot.sh
 !bin/nas-reboot.sh
 !bin/nas-shutdown.sh
+!bin/stats.sh
 
 !.config
 
