--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 
 !bin
 #!bin/**
+!bin/alpine.sh
+!bin/arch.sh
+!bin/artix.s!bin/alpine.sh
+!bin/arch.sh
+!bin/artix.sh
 !bin/eagle.sh
 !bin/forksync.sh
 !bin/gnucash.sh
