--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 !.config
 !.config/awesome
 !.config/awesome/**
-.config/awesome/private.lua
+.config/awesome/config.lua
 
 !.p10k.zsh
 !.config/powerline
