added openweather api key to config; some fixes

--- a/.config/awesome/config.lua.example
+++ b/.config/awesome/config.lua.example
@@ -7,7 +7,8 @@ config.font_awesome_size = "9"
 config.font_xterm = "Source Code Pro"
 config.font_xterm_size = "10"
 config.titlebars_enabled = "true"
-config.cityid = "2810284" -- (Westerland, DE)
+config.openweather_api_key = "INSERT_KEY_HERE"
+config.cityid = "INSERT_CITY_ID_HERE"
 config.quake_width = 1024
 config.quake_height = 768
 config.autostart = {
