--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,8 @@ set -g mode-style fg=colour160,bold,bg=colour238,bold
 # DESIGN: STATUSBAR BOTTOM
 #set -g status-style fg=white,bg=colour250
 set -g status-style fg=white,bg=green
-set -g status-interval 2
+#set -g status-style fg=white,bg=black
+set -g status-interval 1
 set -g status-position bottom
 
 # DESIGN: WINDOW STATUS
@@ -34,8 +35,12 @@ setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
 #setw -g window-status-format "#[fg=white]#[bg=colour59] #I #[fg=colour59]#[bg=colour254] #W "
 #setw -g window-status-current-format "#[fg=white]#[bg=colour24] #I #[fg=colour24]#[bg=colour254] #W "
+
 setw -g window-status-format "#[fg=white]#[bg=colour59] #I #[fg=colour59]#[bg=colour254] #W "
 setw -g window-status-current-format "#[fg=white]#[bg=colour22] #I #[fg=colour22]#[bg=colour254] #W "
+#setw -g window-status-format "#[fg=white]#[bg=colour59] #I #[fg=colour59]#[bg=colour254] #W "
+#setw -g window-status-current-format "#[fg=white]#[bg=green] #I #[fg=green]#[bg=colour254] #W "
+
 #setw -g window-status-current-bg pink
 #setw -g window-status-current-fg grey
 #setw -g window-status-current-attr dim
@@ -48,7 +53,8 @@ set -g status-left ''
 
 # items right to the tabs
 #set -g status-right '#[fg=colour59,bg=colour250,bold] %y/%m/%d |#[fg=colour59,bg=colour250,bold] %H:%M:%S '
-set -g status-right ''
+set -g status-right '#[fg=colour22,bg=green,bold] %F |#[fg=colour22,bg=green,bold] %T '
+#set -g status-right ''
 
 setw -g window-status-bell-style fg=red,bold
 set-window-option -g window-status-bell-style bg=colour160
