~/.tmux.conf update.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -g mode-style fg=colour160,bold,bg=colour238,bold
 #set -g status-style fg=white,bg=colour250
 set -g status-style fg=white,bg=green
 #set -g status-style fg=white,bg=black
-set -g status-interval 1
+set -g status-interval 3600
 set -g status-position bottom
 
 # DESIGN: WINDOW STATUS
@@ -53,8 +53,8 @@ set -g status-left ''
 
 # items right to the tabs
 #set -g status-right '#[fg=colour59,bg=colour250,bold] %y/%m/%d |#[fg=colour59,bg=colour250,bold] %H:%M:%S '
-set -g status-right '#[fg=colour22,bg=green,bold] %F |#[fg=colour22,bg=green,bold] %T '
-#set -g status-right ''
+#set -g status-right '#[fg=colour22,bg=green,bold] %F |#[fg=colour22,bg=green,bold] %T '
+set -g status-right ''
 
 setw -g window-status-bell-style fg=red,bold
 set-window-option -g window-status-bell-style bg=colour160
