Changed tmux prefix from C-b to C-y.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,11 @@
 # Original Source:
 # https://github.com/jonasjacek/colorcli
 
+# Set prefix key
+unbind-key C-b
+bind y send-prefix
+set -g prefix ^y
+
 # DESIGN: 256 COLOR SUPPORT
 setw -g default-terminal "screen-256color"
 
