Getting Ctrl-b back for some time...

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,9 @@
 # https://github.com/jonasjacek/colorcli
 
 # Set prefix key
-unbind-key C-b
+#unbind-key C-b
+#bind b send-prefix
+#set -g prefix ^b
 bind y send-prefix
 set -g prefix ^y
 
