--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,9 @@
 # https://github.com/jonasjacek/colorcli
 
 # Set prefix key
-#unbind-key C-b
-#bind b send-prefix
-#set -g prefix ^b
-bind y send-prefix
-set -g prefix ^y
+unbind-key C-b
+bind x send-prefix
+set -g prefix ^x
 
 # DESIGN: 256 COLOR SUPPORT
 setw -g default-terminal "screen-256color"
