Fixed .xinitrc and switched from ctrl+x to ctrl+y as prefix.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,8 @@
 
 # Set prefix key
 unbind-key C-b
-bind x send-prefix
-set -g prefix ^x
+bind y send-prefix
+set -g prefix ^y
 
 # DESIGN: 256 COLOR SUPPORT
 setw -g default-terminal "screen-256color"
