Menu update and ENV fix.

--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@
 #
 
 # Extend the $PATH to $HOME/bin and more.
-export PATH=$HOME/bin:$HOME/.local/bin/:$HOME/.gem/ruby/3.3.0/bin:$HOME/.android/sdk/platform-tools:$HOME/.cargo/bin:$PATH
+#export PATH=$HOME/bin:$HOME/.local/bin/:$HOME/.gem/ruby/3.4.0/bin:$HOME/.android/sdk/platform-tools:$HOME/.cargo/bin:$PATH
 
