--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,12 @@
-# Original Source:
-# https://github.com/jonasjacek/colorcli
+# Original Source: https://github.com/jonasjacek/
 
 # Set prefix key
 unbind-key C-b
 bind y send-prefix
 set -g prefix ^y
+
+# CONFIGURATION
+set-option -g history-limit 10000
 
 # DESIGN: 256 COLOR SUPPORT
 setw -g default-terminal "screen-256color"
@@ -63,3 +65,4 @@ set -g status-right ''
 
 setw -g window-status-bell-style fg=red,bold
 set-window-option -g window-status-bell-style bg=colour160
+
