--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,11 @@
-# Original Source: https://github.com/jonasjacek/
-
 # Set prefix key
 unbind-key C-b
 bind y send-prefix
 set -g prefix ^y
 
 # CONFIGURATION
+set -g automatic-rename on
+set -g set-titles on
 set-option -g history-limit 10000
 
 # DESIGN: 256 COLOR SUPPORT
