--- a/.env
+++ b/.env
@@ -3,9 +3,14 @@
 # Example: can be shell compatible stuff like export, alias etc. or just
 # define variables like FOO=BAR
 #
-# You should put private stuff to .penv. It is handled the same way as this 
+# You should put private stuff to .penv. It is handled the same way as this
 # file but will be ignored by .gitignore.
 #
+
+# History settings
+HISTSIZE=100000
+SAVEHIST=100000
+HISTFILE=~/.zsh_history
 
 # Extend the $PATH to $HOME/bin and more.
 #export PATH=$HOME/bin:$HOME/.local/bin/:$HOME/.gem/ruby/3.4.0/bin:$HOME/.android/sdk/platform-tools:$HOME/.cargo/bin:$PATH
