--- a/.env
+++ b/.env
@@ -1,17 +1,29 @@
 # Public environment settings
 #
-# Example: can be shell compatible stuff like export, alias etc. or just
+# Example: Can be shell compatible stuff like export, alias etc. or just
 # define variables like FOO=BAR
 #
 # You should put private stuff to .penv. It is handled the same way as this
-# file but will be ignored by .gitignore.
+# file but will be ignored by .gitignore. In .penv stored vars are overwriting
+# vars from here.
 #
 
 # History settings
+HISTFILE=~/.zsh_history
 HISTSIZE=100000
 SAVEHIST=100000
-HISTFILE=~/.zsh_history
 
-# Extend the $PATH to $HOME/bin and more.
+# Extend the $PATH to $HOME/bin and more. I do this in .penv now, but this will
+# remain for documentation reasons.
 #export PATH=$HOME/bin:$HOME/.local/bin/:$HOME/.gem/ruby/3.4.0/bin:$HOME/.android/sdk/platform-tools:$HOME/.cargo/bin:$PATH
+
+# Export the $EDITOR and $TERMINAL
+export BROWSER=/usr/bin/firefox
+export EDITOR=/usr/bin/vim
+export SU=/bin/su
+export TERMINAL='/usr/bin/uxterm -bg black -fg grey -sb -leftbar -si -bc -cr orange -fa "Source Code Pro" -fs 14'
+
+# Fix to make JAVA applications behave more friendly in awesome. Still many JAVA
+# apps suck in awesome. PyCharm works perfect, Arduino does not!
+export _JAVA_AWT_WM_NONREPARENTING=1
 
