--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@
 # vars from here.
 #
 
+osname=$(uname)
+
 # History settings
 HISTFILE=~/.zsh_history
 HISTSIZE=100000
@@ -14,11 +16,14 @@ SAVEHIST=100000
 # remain for documentation reasons.
 #export PATH=$HOME/bin:$HOME/.local/bin/:$HOME/.gem/ruby/3.4.0/bin:$HOME/.android/sdk/platform-tools:$HOME/.cargo/bin:$PATH
 
-# Export the $EDITOR and $TERMINAL
-export BROWSER=/usr/bin/firefox
-export EDITOR=/usr/bin/vim
-export SU=/bin/su
-export TERMINAL='/usr/bin/uxterm -bg black -fg grey -sb -leftbar -si -bc -cr orange -fa "Source Code Pro" -fs 14'
+if [ "$osname" = "FreeBSD" ]; then
+    export EDITOR=/usr/local/bin/vim
+else if [ "$osname" = "Linux" ]; then
+    export BROWSER=/usr/bin/firefox
+    export EDITOR=/usr/bin/vim
+    export SU=/bin/su
+    export TERMINAL='/usr/bin/uxterm -bg black -fg grey -sb -leftbar -si -bc -cr orange -fa "Source Code Pro" -fs 14'
+fi
 
 # Fix to make JAVA applications behave more friendly in awesome. Still many JAVA
 # apps suck in awesome. PyCharm works perfect, Arduino does not!
