--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ SAVEHIST=100000
 
 if [ "$osname" = "FreeBSD" ]; then
     export EDITOR=/usr/local/bin/vim
-else if [ "$osname" = "Linux" ]; then
+elif [ "$osname" = "Linux" ]; then
     export BROWSER=/usr/bin/firefox
     export EDITOR=/usr/bin/vim
     export SU=/bin/su
