--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set -g prefix ^y
 
 # CONFIGURATION
 set -g automatic-rename on
+set-option -g renumber-windows on
 set -g set-titles on
 set-option -g history-limit 10000
 
