changed tmux prefix fomr y to x.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Set prefix key
 unbind-key C-b
 bind y send-prefix
-set -g prefix ^y
+set -g prefix ^x
 
 # CONFIGURATION
 set -g automatic-rename on
